# ltspice_mcp

./: LLM.md  README.md  bltspice_mcp_for_LLM.md  config.json  pyproject.toml  requirements.txt
examples/: ltsteps_example.md  raw_read_example.md  raw_write_example.md  run_montecarlo.md  run_worst_case.md  sim_client_example.md  sim_runner_example.md
examples/codex/: run_ltspice_to_csv.md  run_montecarlo.md  run_worst_case.md
examples/opencode/: ltsteps_example.md  raw_read_example.md  raw_write_example.md  run_ltspice_to_csv.md  run_montecarlo.md  run_worst_case.md  sim_client_example.md  sim_runner_example.md
file_formats/: LTSPICE_NET.md  LTSpice_ASC.md  LTSpice_ASC_note0.md  LTSpice_NET_note1.md  LT_Spice_note1.md
src/bltspice_mcp/: config.py  dispatcher.py
src/ltspice_mcp/: __init__.py  __main__.py  app.py  config.py  conversion.py  dispatcher.py  responses.py  runtime.py  session.py
src/ltspice_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
testfiles/: Batch_Test.net  opampdouble.net
tests/fixtures/: pyltspice_example_manifest.json
tests/integration/: test_examples_via_mcp.py  test_mcp_server_integration.py  test_readme_examples_via_mcp.py  test_run_ltspice_to_csv_via_mcp.py
tests/unit/: test_app.py  test_config.py  test_dispatcher.py  test_responses.py  test_session.py
