[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ltspice-mcp"
version = "0.1.0"
description = "Asynchronous MCP server for LTspice using PyLTSpice"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyLTSpice>=5.5.1",
  "fastmcp>=3.2.4",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
