[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bltspice-mcp"
version = "0.2.8"
description = "Create ltspice circuits with LLMs. Convert netlist to LTSpice .asc."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyLTSpice>=6.0.1",
  "fastmcp>=3.4.4",
  "electronics-design>=0.1.7",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
